# Visionary

./: .gitignore  README.md  pyproject.toml
api/: .dockerignore  Dockerfile  requirements.txt  visionary-serving.py
conf/base/: catalog.yml  parameters.yml  parameters_data_ingestion.yml  parameters_data_preparation.yml  parameters_data_viz.yml  parameters_feature_engineering.yml  parameters_model_training.yml
k8s/: Chart.yaml  values.yaml
k8s/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  serviceaccount.yaml
k8s/visionary-serving/templates/: hpa.yaml  service.yaml
notebooks/: Quantile_feature.ipynb  Test_api_local.ipynb  Untitled.ipynb  data_filter_preparation.ipynb  data_investigator.ipynb  price_dbd_analytics.ipynb  vector_target.ipynb
src/visioanry/: __init__.py  __main__.py  settings.py
src/visioanry/pipelines/data_ingestion/: nodes.py  pipeline.py
src/visioanry/pipelines/feature_engineering/: nodes.py  pipeline.py
src/visioanry/pipelines/model_training/: nodes.py  pipeline.py
src/visionary/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/visionary/datasets/: dat_dataset.py  generator_figure_dataset.py  prophet_model.py
src/visionary/pipelines/data_ingestion/: nodes.py  pipeline.py
src/visionary/pipelines/data_preparation/: __init__.py  nodes.py  pipeline.py
src/visionary/pipelines/data_viz/: __init__.py  nodes.py  pipeline.py
src/visionary/pipelines/feature_engineering/: __init__.py  nodes.py  pipeline.py
src/visionary/pipelines/model_training/: nodes.py  pipeline.py
tests/pipelines/data_preparation/: test_pipeline.py
tests/pipelines/data_viz/: test_pipeline.py
