[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "visionary"
readme = "README.md"
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.1.1",
    "plotly-express>=0.4.1",
    "kedro-datasets>=9.0.0",
    "kedro-viz>=12.2.0",
    "prophet>=1.2.1",
    "loguru>=0.7.3",
    "scikit-learn>=1.7.2",
    "mlflow==2.10.0",
    "boto3>=1.42.22",
    "catboost>=1.2.0",
    "shap>=0.45.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.2",
    "haversine>=2.9.0",
    "chronos-forecasting>=2.2.2",
    "autogluon-timeseries>=1.5.0",
]

[project.scripts]
visionary = "visionary.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
dev = [
    "pytest-cov>=3,<7",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.12.0",
]

[tool.setuptools.dynamic.version]
attr = "visionary.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "visionary"
project_name = "visionary"
kedro_init_version = "1.1.1"
tools = "['Linting', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",
    "W",
    "E",
    "I",
    "UP",
    "PL",
    "T201",
]
ignore = [
    "E501",
]

[tool.kedro_telemetry]
project_id = "384032a7d54c474b89dd180d4bd56c92"
